--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "https://www.grantfinn.com",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^5.4.3",
+    "@coreui/react": "^5.8.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
