--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.6.1",
     "framer-motion": "^12.23.12",
+    "jest": "^27.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
     "recoil": "^0.7.7",
