--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
     "recoil": "^0.7.7",
+    "serve": "^14.2.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "serve -s build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
