--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "start": "serve -s build",
     "build": "react-scripts build",
+    "prestart": "npm run build", 
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
