--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s build",
     "build": "react-scripts build",
     "prestart": "npm run build", 
+    "start": "serve -s build -l $PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
