--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "cross-env": "^10.1.0",
     "gh-pages": "^6.3.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "react-scripts": "5.0.1"
   }
 }
