--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "prestart": "npm run build", 
     "start": "serve -s build -l $PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -34,27 +33,15 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
     "gh-pages": "^6.3.0",
-    "prettier": "^3.6.2",
-    "react-scripts": "5.0.1"
+    "prettier": "^3.6.2"
   }
 }
