--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "jest": "^27.5.1",
     "react": "^18.2.0",
@@ -23,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "node server.js",
     "build": "react-scripts build",
-    "start": "npx serve -s build -l $PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
@@ -53,8 +54,8 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "jest": "^27.5.1",
     "cross-env": "^10.1.0",
+    "jest": "^27.5.1",
     "prettier": "^3.6.2",
     "react-scripts": "5.0.1"
   }
